[gd_scene format=3 uid="uid://bp1xm627ct5mg"]

[ext_resource type="FontFile" uid="uid://c82v6nnwr2qvs" path="res://assets/fonts/fonts/connection/ConnectionBold.otf" id="1_2qta7"]
[ext_resource type="Script" uid="uid://b56a030ds1i7q" path="res://assets/scripts/level_selection.gd" id="1_scpca"]
[ext_resource type="Texture2D" uid="uid://cdbkqe5i76d1p" path="res://assets/sprites/inside_drawer.png" id="2_t3jvk"]

[node name="LevelSelection" type="Control" unique_id=110255353]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_scpca")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1322006076]
layout_mode = 1
anchors_preset = -1
anchor_right = 2.2673612
anchor_bottom = 2.1728394
offset_right = -1460.0
offset_bottom = -760.0
texture = ExtResource("2_t3jvk")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=957702865]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="GridContainer" type="GridContainer" parent="MarginContainer" unique_id=952005783]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 5

[node name="L1Button" type="Button" parent="MarginContainer/GridContainer" unique_id=1978314970]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Level
1"
autowrap_mode = 1

[node name="L2Button" type="Button" parent="MarginContainer/GridContainer" unique_id=265295941]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Level
2"
autowrap_mode = 1

[node name="L3Button" type="Button" parent="MarginContainer/GridContainer" unique_id=1767981276]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Level
3"
autowrap_mode = 1

[node name="L4Button" type="Button" parent="MarginContainer/GridContainer" unique_id=527990910]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Level
4"
autowrap_mode = 1

[node name="L5Button" type="Button" parent="MarginContainer/GridContainer" unique_id=620998525]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Level
5 "
autowrap_mode = 1

[node name="L6Button" type="Button" parent="MarginContainer/GridContainer" unique_id=1784734076]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Level
6"
autowrap_mode = 1

[node name="L7Button" type="Button" parent="MarginContainer/GridContainer" unique_id=1513344243]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Level
7"
autowrap_mode = 1

[node name="L8Button" type="Button" parent="MarginContainer/GridContainer" unique_id=1962475557]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Level
8"
autowrap_mode = 1

[node name="L9Button" type="Button" parent="MarginContainer/GridContainer" unique_id=253750971]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Level
9"
autowrap_mode = 1

[node name="L10Button" type="Button" parent="MarginContainer/GridContainer" unique_id=750747298]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Level
10"
autowrap_mode = 1

[node name="MenuButton" type="Button" parent="MarginContainer" unique_id=118237424]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_2qta7")
theme_override_font_sizes/font_size = 48
text = "Main Menu"
autowrap_mode = 1

[connection signal="pressed" from="MarginContainer/GridContainer/L1Button" to="." method="_on_l_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/L2Button" to="." method="_on_l_2_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/L3Button" to="." method="_on_l_3_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/L4Button" to="." method="_on_l_4_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/L5Button" to="." method="_on_l_5_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/L6Button" to="." method="_on_l_6_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/L7Button" to="." method="_on_l_7_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/L8Button" to="." method="_on_l_8_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/L9Button" to="." method="_on_l_9_button_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/L10Button" to="." method="_on_l_10_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuButton" to="." method="_on_menu_button_pressed"]
